--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -39,7 +39,7 @@ Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1
 | **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | **(2)** The page is very static. The user struggles where to start and struggles to understand where to first start typing. **(2)**:  There is no loading screen or initial tutorial to indicate the beginning. Upon opening the app, it jumps straight into the app's function without preface.       |  A cursor (blinking line to indicate where text appears) should be implemented in the "Title" field. Additionally, a quick loading screen (1 second) could help the user understand that the system has just start up and is ready to be used.  |
 | **#2: Match between system and the real world:** The design should speak the users' language. Use words, phrases, and concepts familiar to the user, rather than internal jargon. Follow real-world conventions, making information appear in a natural and logical order.   | **(2)** The "Print Waiting ..." is not a natural phrase people see, so it can be confusing to some.  | Instead of "Print Waiting ...", the Print button should simply be labeled as "Print". |
 | **#3: User control and freedom:** Users often perform actions by mistake. They need a clearly marked "emergency exit" to leave the unwanted action without having to go through an extended process.  | **(3)** This app does not have a single back button. This problem is especially bad when users hit the settings icon. There is no option to escape and the navigation bar changes to a new set of icons, which ultimately ruins consistency. **(3)** This app does not have the swipe feature to swipe between pages like most other apps. | Every page should have an "x" button or a back button so that users can change their minds. This is especially evident in the setting page because the only way to get back to the homepage is to complete exit the app. Additionally, the swipe feature should be implemented so that users can quickly switch pages. |
-| **#4: Consistency and standards:** Users should not have to wonder whether different words, situations, or actions mean the same thing. Follow platform and industry conventions.| **(3)** A lot of the icons are crpytic and some are even mislabeled. The first 2 icons on the navigation abar are nearly uninterpretable, and the last icon is colloquially recognized as a Profile icon, but instead serves to show a tutorial. | The icons should be properly selected and should fit the common standard. A profile icon should lead to the profile section. |
+| **#4: Consistency and standards:** Users should not have to wonder whether different words, situations, or actions mean the same thing. Follow platform and industry conventions.| **(3)** A lot of the icons are cryptic and some are even mislabeled. The first 2 icons on the navigation bar are nearly uninterpretable, and the last icon is colloquially recognized as a Profile icon, but instead serves to show a tutorial. | The icons should be properly selected and should fit the common standard. A profile icon should lead to the profile section. |
 | **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | **(3)** The Picture/Profile Picture can be easily changed by tapping the icon (a rather large icon too). Users will often accidentally hit this icon which opens up the camera app. | The ability to change the Picture/Profile Picture should be indicated by a small X on the upper left corner of the icon. The X is a clear indication to get rid/change the profile picture. This way users will not accidentally hit it andopen the camera. |
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | **(3)** The navigation bar changes frequently depending on which page the user is at. Getting onto a new page means learning the new navigation, which is very taxing on the user. Users have to actively learn how to use the app. | The navigation bar should be unchanging to reinforce recognition. Additionally, they should be labeled because they are necessary to efficient navigation in that users will not have to guess the meaning of the icon. |
 | **#7: Flexibility and efficiency of use:** Shortcuts may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | **(2)** Additional options for export are tucked away in the 2nd icon in the navigation bar. Users that want to email or delete the label must first click on the tab and then actually perform the action. | Perhaps instead of a giant "Print" button, There can be four smaller buttons that can print, delete, save to Photos, and email. The 2nd icon in the navigation bar can be removed to reduce clutter. Alternatively, a better option would be to replace the "Print" with a general Export button, where users can then choose the subsequent action (print, delete, etc). | **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The layout is indeed minimal. However, some buttons in the navigation bar could be removed altogether. The "restart" and "export" button are taking up a lot of space. | The "restart" button should be a small X in the top left corner on the actual interface that users interact with for the functionality aspect. The export button can be moved to the actual interface as well, so that all functions are present and within proximity. |
