--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -40,10 +40,11 @@ Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1
 | **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order. | **(2)** The "Print Waiting ..." is not a natural phrase people see, so it can be confusing to some.  | Instead of "Print Waiting ...", the Print button should simply be labeled as "Print". |
 | **#3: User control and freedom:** Users should be able to easily undo an action if they make a mistake, as this instills confidence in the user.  | **(3)** This app does not have a single back button. This problem is especially bad when users hit the settings icon. There is no option to escape and the navigation bar changes to a new set of icons, which ultimately ruins consistency. **(3)** This app does not have the swipe feature to swipe between pages like most other apps. | Every page should have an "x" button or a back button so that users can change their minds. This is especially evident in the setting page because the only way to get back to the homepage is to complete exit the app. Additionally, the swipe feature should be implemented so that users can quickly switch pages. |
 | **#4: Consistency and standards:** Users should follow industry convention. Users should be able understand the meaning of iconography quickly and not have to guess.| **(3)** A lot of the icons are cryptic and some are even mislabeled. The first 2 icons on the navigation bar are nearly uninterpretable, and the last icon is colloquially recognized as a Profile icon, but instead serves to show a tutorial. | The icons should be properly selected and should fit the common standard. A profile icon should lead to the profile section. |
-| **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | **(3)** The Picture/Profile Picture can be easily changed by tapping the icon (a rather large icon too). Users will often accidentally hit this icon which opens up the camera app. | The ability to change the Picture/Profile Picture should be indicated by a small X on the upper left corner of the icon. The X is a clear indication to get rid/change the profile picture. This way users will not accidentally hit it andopen the camera. |
-| **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | **(3)** The navigation bar changes frequently depending on which page the user is at. Getting onto a new page means learning the new navigation, which is very taxing on the user. Users have to actively learn how to use the app. | The navigation bar should be unchanging to reinforce recognition. Additionally, they should be labeled because they are necessary to efficient navigation in that users will not have to guess the meaning of the icon. |
-| **#7: Flexibility and efficiency of use:** Shortcuts may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | **(2)** Additional options for export are tucked away in the 2nd icon in the navigation bar. Users that want to email or delete the label must first click on the tab and then actually perform the action. | Perhaps instead of a giant "Print" button, There can be four smaller buttons that can print, delete, save to Photos, and email. The 2nd icon in the navigation bar can be removed to reduce clutter. Alternatively, a better option would be to replace the "Print" with a general Export button, where users can then choose the subsequent action (print, delete, etc). | **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The layout is indeed minimal. However, some buttons in the navigation bar could be removed altogether. The "restart" and "export" button are taking up a lot of space. | The "restart" button should be a small X in the top left corner on the actual interface that users interact with for the functionality aspect. The export button can be moved to the actual interface as well, so that all functions are present and within proximity. |
-| **#9: Help users recognize, diagnose, and recover from errors** Error messages should be expressed in plain language, precisely indicate the problem, and constructively suggest a solution. | **(1)** Feedback is provided when nothing is input. Users are instructed to fill in minimum information before printing the label. | No changes need to be made, other than cosmetic ones. There should be more white space between the heading and subheading. |
+| **#5: Error prevention:** Present users with a way to check if they actually want to go through with the action to prevent accidental errors. Prevent errors from occurring in the first place. | **(3)** The Picture/Profile Picture can be easily changed by tapping the icon (a rather large icon too). Users will often accidentally hit this icon which opens up the camera app. | The ability to change the Picture/Profile Picture should be indicated by a small X on the upper left corner of the icon. The X is a clear indication to get rid/change the profile picture. This way users will not accidentally hit it andopen the camera. |
+| **#6: Recognition rather than recall:** Users should not have to frequently memorize the interface. Additionally, important navigational items should be always visible and easily accessible. | **(3)** The navigation bar changes frequently depending on which page the user is at. Getting onto a new page means learning the new navigation, which is very taxing on the user. Users have to actively learn how to use the app. | The navigation bar should be unchanging to reinforce recognition. Additionally, they should be labeled because they are necessary to efficient navigation in that users will not have to guess the meaning of the icon. |
+| **#7: Flexibility and efficiency of use:** Allow users to access shortcuts to speed up frequent interactions. These shortcuts should be optional but always available for expert users. | **(2)** Additional options for export are tucked away in the 2nd icon in the navigation bar. Users that want to email or delete the label must first click on the tab and then actually perform the action. | Perhaps instead of a giant "Print" button, There can be four smaller buttons that can print, delete, save to Photos, and email. The 2nd icon in the navigation bar can be removed to reduce clutter. Alternatively, a better option would be to replace the "Print" with a general Export button, where users can then choose the subsequent action (print, delete, etc). |
+|**#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The layout is indeed minimal. However, some buttons in the navigation bar could be removed altogether. The "restart" and "export" button are taking up a lot of space. | The "restart" button should be a small X in the top left corner on the actual interface that users interact with for the functionality aspect. The export button can be moved to the actual interface as well, so that all functions are present and within proximity. |
+| **#9: Help users recognize, diagnose, and recover from errors** Error messages should be easy to understand and indicate the issue clearly. The error should also offer a solution. | **(1)** Feedback is provided when nothing is input. Users are instructed to fill in minimum information before printing the label. | No changes need to be made, other than cosmetic ones. There should be more white space between the heading and subheading. |
 | **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(2)** The only sort of help/documentation on this app is on the "profile" icon, which gives a brief, 5-step tutorial on how to use the app. The problem is that users would not know that this tutorial exists unless they experiment and try out every button until they hit the "profile" icon--the last icon on the navigation bar  **(3)** The different pages of the app are not labeled and fail to provide instructions. The user must click around to understand where they are/what the purpose of the page is. | The tutorial should be one of the first things the user should be greeted with upon opening the app for the very first time. Additionally, each page of the app should have some sort of text to preface what is going on. Headings and information/instructions should be added to ever page.  |
 
 
