--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -9,8 +9,8 @@ This is the 1-3 scale that we will use to rate the severity of usability problem
 | Rating | Importance |
 |--------|------------|
 | 1      | Little to no issues, issues that arise are cosmetic |
-| 2      | Fixing this should be given low-medium priority |
-| 3      | Fixing this should be given medium-high priority |
+| 2      | Is a minor usability problem--fixing this should be given low-medium priority |
+| 3      | Major usability problem--fixing this should be given top priority |
 
 Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/
 
