--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -65,20 +65,20 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 </p>
 
 
-`Overall Evaluation:`
+`Overall Evaluation:` This app allows adults to stay connected with their senior citizen parents and keep track of their appointments, medications, and perform requests and deal with emergency situations on their behalf.
 
 ### Heuristic Evaluation
 
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
-| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time.      | | |
+| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. Once the app as a whole is rather static, though. However it is still funcitonal. | This app would benefit from having any sort of animation to indicate that the user is not frozen. This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
 | **#2: Match between system and the real world:** The design should speak the users' language. Use words, phrases, and concepts familiar to the user, rather than internal jargon. Follow real-world conventions, making information appear in a natural and logical order.   | |  |
 | **#3: User control and freedom:** Users often perform actions by mistake. They need a clearly marked "emergency exit" to leave the unwanted action without having to go through an extended process.  | | |
 | **#4: Consistency and standards:** Users should not have to wonder whether different words, situations, or actions mean the same thing. Follow platform and industry conventions.| | |
 | **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | | |
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | | |
 | **#7: Flexibility and efficiency of use:** Shortcuts may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | | 
-| **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | |  |
+| **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The middle/top half of the app should contain the most relevant information & features. However, it is wasted on a carousel/slideshow that repeats the exact same information below but as buttons.  | The slideshow should be removed and instead be filled with updates/reports, for example. 
 | **#9: Help users recognize, diagnose, and recover from errors** Error messages should be expressed in plain language, precisely indicate the problem, and constructively suggest a solution. |  | |
 | **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | |  |
 
