--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -53,7 +53,7 @@ Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1
 ### Anvayaa
 Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 
-`About:` 
+`About:` This app is for a care facility that allows adults to stay connected with their senior citizen parents and keep track of daily tasks, appointments, medications, perform requests and deal with emergency situations on their behalf. This app promotes social engagement by organizing family events, arranging picnics, outings and other events. The app was built to provide reassurance that their parents are in the right hands by providing a channel to see what their parents are up to and how they are doing.
 
 <p align ="middle">
   <img src="/Images/Anvayaa%20Homepage.PNG" width="400" />
@@ -65,7 +65,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 </p>
 
 
-`Overall Evaluation:` This app allows adults to stay connected with their senior citizen parents and keep track of their appointments, medications, and perform requests and deal with emergency situations on their behalf.
+`Overall Evaluation:` 
 
 ### Heuristic Evaluation
 
