--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -18,7 +18,7 @@ Credit: https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-p
 ### Senior Assist Reminder & Learning
 Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1079081521 
 
-`About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak.  
+`About:` Senior Assist is an app that prints simple instructions on the spot to serve as reminders for daily tasks or alternate forms of communication. The instructions are printed as large, readable lables so that they can be adhered onto surfaces or to be used as cue cards for those who speak a foreign language or are unable to speak. This app comes with pre-made templates to work with (e.g. To-do lists, Get X Medication).
 
 <p align ="middle">
   <img src="/Images/Senior%20Assist%20Homepage.jpg" width="400" />
