--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -78,7 +78,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 | **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | | |
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | | |
 | **#7: Flexibility and efficiency of use:** Shortcuts may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | | 
-| **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The middle/top half of the app should contain the most relevant information & features. However, it is wasted on a carousel/slideshow that repeats the exact same information below but as buttons.  | The slideshow should be removed and instead be filled with updates/reports, for example. 
+| **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(1)** The middle/top half of the app should contain the most relevant information & features. However, it is wasted on a carousel that repeats the exact same information below but as buttons. The carousel is deceiving because they look like buttons but are not. Carousels of pictures should have an indicator that shows the progression of images to allow the user to understand the status (progression) of the carousel.  | The carousel should be removed and instead be filled with updates/reports, for example. 
 | **#9: Help users recognize, diagnose, and recover from errors** Error messages should be expressed in plain language, precisely indicate the problem, and constructively suggest a solution. |  | |
 | **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | |  |
 
