--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -72,8 +72,8 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
 | **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. Once the app as a whole is rather static, though. However it is still funcitonal. | This app would benefit from having any sort of animation to indicate that the user is not frozen. This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
-| **#2: Match between system and the real world:** The design should speak the users' language. Use words, phrases, and concepts familiar to the user, rather than internal jargon. Follow real-world conventions, making information appear in a natural and logical order.   | |  |
-| **#3: User control and freedom:** Users often perform actions by mistake. They need a clearly marked "emergency exit" to leave the unwanted action without having to go through an extended process.  | | |
+| **#2: Match between system and the real world:** The design should speak the users' language. Use words, phrases, and concepts familiar to the user, rather than internal jargon. Follow real-world conventions, making information appear in a natural and logical order.   | **(1)** The most items are clearly defined and do not use any strange jargon. However one button is labeled "PMS", which the user might have to guess what it means. Based on the homepage and the wallet icon, the user can infer that it means "Payment Management System | "PMS" should be spelled out so that the user does not have to guess what it is.  |
+| **#3: User control and freedom:** Users often perform actions by mistake. They need a clearly marked "emergency exit" to leave the unwanted action without having to go through an extended process.  | **(1)** The top left of the subpages contain a distinct back button which is characterized as a back arrow. This is clear to the user that it means go back. The user can easily go back to the home page as the navigation bar is unchanging. | Most apps these days have a swipe left/right funtion to go forward or back. This app should implement this to keep up with industry standards, but other than this the app is functional in this regard. |
 | **#4: Consistency and standards:** Users should not have to wonder whether different words, situations, or actions mean the same thing. Follow platform and industry conventions.| | |
 | **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | | |
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | | |
