--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -71,14 +71,14 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
-| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. Once the app as a whole is rather static, though. However it is still funcitonal. | This app would benefit from having any sort of animation to indicate that the user is not frozen. This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
+| **#1: Visibility of system status:** The design should always keep users informed about what is going on, through appropriate feedback within a reasonable amount of time. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. Once the app as a whole is rather static, though. However it is still functional. **(1)** The app has a loading animation whenever pressing a button--this tells the users to be patient as the system is in the process of running. | This app would benefit from having any sort of animation to indicate that the user is not frozen. This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
 | **#2: Match between system and the real world:** The design should speak the users' language. Use words, phrases, and concepts familiar to the user, rather than internal jargon. Follow real-world conventions, making information appear in a natural and logical order.   | **(3)** One button is labeled "PMS", which the user might have to guess what it means. Based on the homepage and the wallet icon, the user can infer that it means "Payment Management System". Additionally, one item is labeled "Escalations" in the settings panel. This is rather cryptic--if they meant that something happened to the senior citizen, then this does not belong in Settings. | "PMS" should be spelled out so that the user does not have to guess what it is. Additionally, the "Escalations" section should be moved into another page that describes patient well-being. |
 | **#3: User control and freedom:** Users often perform actions by mistake. They need a clearly marked "emergency exit" to leave the unwanted action without having to go through an extended process.  | **(1)** The top left of the subpages contain a distinct back button which is characterized as a back arrow. This is clear to the user that it means go back. The user can easily go back to the home page as the navigation bar is unchanging. | There is little to improve, as the pages have a back button and the user is prompted to Cancel whenever they perform an unwanted action. |
 | **#4: Consistency and standards:** Users should not have to wonder whether different words, situations, or actions mean the same thing. Follow platform and industry conventions.| Most apps these days have a swipe left/right funtion to go forward or back. Some users may find themselves swiping left and right to navigate but realizing that this doesn't exist, so it may frustrate the user. | The app should implement this swiping-to-navigate feature to keep up with industry standards. |
-| **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | | |
+| **#5: Error prevention:** Good error messages are important, but the best designs carefully prevent problems from occurring in the first place. Eliminate error-prone conditions, or check for them and present users with a confirmation option before they commit to the action. | **(2)** Users that do not have a paid plan yet cannot access some content. The system does indeed tell them to get a plan as a solution. To prevent most errors, though, things should be described so that users do not have to experiment. There is an overall lack of description. | This app could benefit from some sort of guidance/description in regards to what does what--this app is virtually all icons with a short label, with zero full-length sentences in sight. |
 | **#6: Recognition rather than recall:** Minimize the user's memory load by making elements, actions, and options visible. The user should not have to remember information from one part of the interface to another. Information required to use the design (e.g. field labels or menu items) should be visible or easily retrievable when needed. | **(2)** The layout and navigation bar are pretty consistent. However, the content is organized in a gridlike manner with little visual hierarchy. Additionally, like items are not found in the same row in the grid. As such, users would need to scan the page to see what they are looking for. | Like items should be grouped together and have a heading attached to them so that there is hierarchy. For example, in the Profile page, there should be a heading called "My Plans" and have My Care Plan, Payment Management System, Regular Health Plan grouped together. The Reminders should not be in Profile, and Beneficiary Details and Electronic Medical should be grouped together. Grouping would minimize cognitive load.  |
 | **#7: Flexibility and efficiency of use:** Shortcuts may speed up the interaction for the expert user such that the design can cater to both inexperienced and experienced users. Allow users to tailor frequent actions. | **(3)** There are no shortcuts of any sorts on this app.  | 
 | **#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility. | **(2)** The middle/top half of the app should contain the most relevant information & features. However, it is wasted on a carousel that repeats the exact same information below but as buttons. The carousel is deceiving because they look like buttons but are not. | Carousels of pictures should have an indicator that shows the progression of images to allow the user to understand the status (progression) of the carousel. However, the carousel should be removed and instead be filled with relevant updates/reports on their parents, for example. 
 | **#9: Help users recognize, diagnose, and recover from errors** Error messages should be expressed in plain language, precisely indicate the problem, and constructively suggest a solution. |  | |
-| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(2)** There is no help section, and some items are not explained. For example, there is a large emergency button in the middle of the screen without context. Additionally, there is little guidance offered to first time users. | The Emergency button should have a description as to what will happen if you press it. This app could benefit from a short tutorial and could also benefit from more details under each section heading. For example, in the Proofile page, we have a lot of potential actions the user can make, but with no description or heading to preface what is inside each button. |
+| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(2)** There is no help section, and some items are not explained. For example, there is a large emergency button in the middle of the screen without context. Additionally, there is little guidance offered to first time users. | The Emergency button should have a description as to what will happen if you press it. This app could benefit from a short tutorial and could also benefit from more details under each section heading. For example, in the Profile page, we have a lot of potential actions the user can make, but with no description or heading to preface what is inside each button. |
 
