--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -65,7 +65,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 </p>
 
 
-`Overall Evaluation:` Overall, this is a functional app that gets the job done. However, the lack of description and overreliance of iconography may leave users confused, especially for the elder demographic. This app could also benefit from better grouping of icons/content. A carousel is at the top of the screen, but only serves as clutter as it repeats information listed (as buttons) on the bottom. This carousel implies that the contents are buttons, but are in fact static images, which may frustrate the user. 
+`Overall Evaluation:` Overall, this is a functional app that gets the job done. However, the lack of description and overreliance of iconography may leave users confused, especially for the elder demographic. This app could also benefit from better grouping of icons/content. A carousel is at the top of the screen, but only serves as clutter as it repeats information listed (as buttons) on the bottom. This carousel implies that the contents are buttons, but are in fact static images, which may frustrate the user. Additionally, some functions are placed on the wrong page, and some functions need not take up an entire slot. For example, Settings could easily be tucked away as a smaller icon and placed on the top righthand corner to reduce clutter.
 
 ### Heuristic Evaluation
 
