--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -71,7 +71,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
-| **#1: Visibility of system status:** Users should always understand the status of where they are at & what they are doing by receiving feedback from the system. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. The app as a whole is rather static, though. However it is still functional. **(1)** The app has a loading animation whenever pressing a button--this tells the users to be patient as the system is in the process of running. | This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
+| **#1: Visibility of system status:** Users should always understand the status of where they are at & what they are doing by receiving feedback from the system. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. The app as a whole is rather static, though. **(1)** The app has a loading animation whenever pressing a button--this tells the users to be patient as the system is in the process of running. | This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
 | **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order.  | **(3)** One button is labeled "PMS", which the user might have to guess what it means. Based on a different page and the wallet icon, the user can infer that it means "Payment Management System". Additionally, one item is labeled "Escalations" in the settings panel. This is rather cryptic--if they meant that something happened to the senior citizen, then this does not belong in Settings.  **(2)** There is an overall lack of description as this app relies too heavily on iconography. Information is not provided in a logical order.| "PMS" should be spelled out so that the user does not have to guess what it is. Additionally, the "Escalations" section should be moved into another page that describes patient well-being. The app should add description and headings throughout the app to better clarify their purposes and functions.|
 | **#3: User control and freedom:** Users should be able to easily undo an action if they make a mistake, as this instills confidence in the user.   | **(1)** The top left of the subpages contain a distinct back button which is characterized as a back arrow. This is clear to the user that it means go back. The user can easily go back to the home page as the navigation bar is unchanging. | There is little to improve, as the pages have a back button and the user is prompted to Cancel whenever they perform an unwanted action. |
 | **#4: Consistency and standards:** Users should follow industry convention. Users should be able understand the meaning of iconography quickly and not have to guess. | **(1)** Most apps these days have a swipe left/right funtion to go forward or back. Some users may find themselves swiping left and right to navigate but realizing that this doesn't exist, so it may frustrate the user. | The app should implement this swiping-to-navigate feature to keep up with industry standards. |
